# session-rs

./: .env.example  .gitignore  Cargo.toml  README.md  api.yml.example
src/: app.rs  builder.rs  cache.rs  claims.rs  gateway.rs  main.rs  modules.rs  oauth.rs  oidc.rs  reverse_proxy.rs  session.rs
src/modules/: auth.rs  oidc.rs  service.rs
src/modules/auth/: claims.rs  oauth.rs  oidc.rs  session.rs
src/modules/auth/oauth/: controller.rs  google.rs  routes.rs
src/oauth/: controller.rs  routes.rs
src/oidc/: controller.rs  service.rs
src/reverse_proxy/: service.rs
src/session/: service.rs
